added makefile, updated gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
 bin/proj
 .vscode/launch.json
 .vscode/settings.json
+ProjektSBD1.zip
+bin/debug/App.d
+bin/debug/App.o
+bin/debug/FileManager.d
+bin/debug/FileManager.o
+bin/debug/main.d
+bin/debug/main.o
+bin/debug/Sorter.d
+bin/debug/Sorter.o
+bin/debug/Tape.d
+bin/debug/Tape.o
+bin/relase/App.d
+bin/relase/App.o
+bin/relase/FileManager.d
+bin/relase/FileManager.o
+bin/relase/main.d
+bin/relase/main.o
+bin/relase/Sorter.d
+bin/relase/Sorter.o
+bin/relase/Tape.d
+bin/relase/Tape.o
